<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StockDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/title_company_symbol"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail_company_symbol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="PEGA"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/title_company_name"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail_company_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="Pega Systems Inc."
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/title_current_price"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail_current_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_dollar"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="130.33"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/title_daily_low_price"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail_low_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_dollar"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="130.33"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="10sp"
            android:text="@string/title_daily_high_price"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_detail_high_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_dollar"
            android:gravity="end"
            android:paddingEnd="20dp"
            android:text="140.00"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>